[package]
name = "replaykit-rs"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/replaykit-rs"
repository = "https://github.com/doom-fish/replaykit-rs"
description = "Safe Rust bindings for Apple's ReplayKit framework — screen recording, preview, sample-buffer capture, and broadcast control on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["replaykit", "screen-recording", "broadcast", "macos", "apple"]
categories = ["api-bindings", "os::macos-apis"]
rust-version = "1.70"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "COVERAGE.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "replaykit"
crate-type = ["lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.1, <0.3", optional = true }

[dev-dependencies]
pollster = "0.3"

[features]
default = []
async = ["doom-fish-utils"]

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
debug = "full"
strip = "none"
